# qe-mgr-yew

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  index.html
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs  team.rs  ticket.rs  user.rs
backend/src/model/: mod.rs  team.rs  ticket.rs  user.rs
backend/src/repository/: inmem.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: board.rs  card.rs  card_create_modal.rs  mod.rs
src/: common.rs  main.rs
src/components/: board.rs  card.rs  card_create_modal.rs  card_edit_modal.rs  header.rs  home.rs  mod.rs  modal.rs
