[package]
name = "qe-mgr-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2.4"
gloo-utils = "0.1.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
stylist = { version = "0.10.1", features = ["yew_integration"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["console", "InputEvent", "KeyboardEvent", "HtmlSelectElement"] }
yew = "0.19.3"
yew-router = "0.16.0"
yew_icons = { version = "0.5.0", features = ["FontAwesomeSolidCirclePlus"] }
